fix: change colors , add dark , edit in xml ...

--- a/app/src/main/res/layout/chip_item.xml
+++ b/app/src/main/res/layout/chip_item.xml
@@ -7,7 +7,6 @@
     android:textColor="@color/base_color"
     app:closeIconTint="@color/white"
     app:chipBackgroundColor="@color/cards_color"
-    style="@style/Widget.MaterialComponents.Chip.Choice"
-    >
+    style="@style/Widget.MaterialComponents.Chip.Choice" >
 
 </com.google.android.material.chip.Chip>
