--- a/app/src/main/res/layout/item_categories_display.xml
+++ b/app/src/main/res/layout/item_categories_display.xml
@@ -65,7 +65,7 @@
             android:maxHeight="25dp"
             android:minWidth="90dp"
             android:text="@{item.originalTitle}"
-            android:textColor="@color/black"
+            android:textColor="@color/primary_text_color"
             android:textSize="14sp"
             android:textStyle="bold"
             app:layout_constraintLeft_toRightOf="@id/top_Card"
@@ -78,7 +78,7 @@
             android:layout_height="wrap_content"
             android:elevation="@dimen/elevation8"
             android:text="@{item.releaseDate}"
-            android:textColor="@color/black"
+            android:textColor="@color/secondary_text_color"
             android:textSize="@dimen/text12sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@id/movie_rate"
@@ -96,7 +96,7 @@
             android:elevation="@dimen/elevation8"
             android:isIndicator="true"
             android:numStars="5"
-            android:progressBackgroundTint="@color/blue_text_color"
+            android:progressBackgroundTint="@color/secondary_text_color"
             android:progressTint="@color/base_color"
             android:rating="@{Float.valueOf(item.voteAverage)}"
             app:layout_constraintBottom_toBottomOf="@id/top_Card"
