--- a/app/src/main/res/color/chip_state.xml
+++ b/app/src/main/res/color/chip_state.xml
@@ -10,10 +10,10 @@
         android:state_checked="true"/>
 
     <item
-        android:color="@color/dark_chip"
+        android:color="@color/cards_color"
         android:state_enabled="true"/>
 
     <item
-        android:color="@color/dark_chip"/>
+        android:color="@color/cards_color"/>
 
 </selector>
