--- a/app/src/main/res/drawable/details_shape.xml
+++ b/app/src/main/res/drawable/details_shape.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <solid android:color="@color/backgruond_color"/>
+    <solid android:color="@color/background_color"/>
     <corners
-        android:topLeftRadius="@dimen/radius24"
-        android:topRightRadius="@dimen/radius72"/>
+        android:topLeftRadius="@dimen/radius32"
+        android:topRightRadius="@dimen/radius100"/>
 </shape>
