--- a/app/src/main/res/drawable/shape_card_details.xml
+++ b/app/src/main/res/drawable/shape_card_details.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <stroke android:width="1dp" android:color="@color/secondary_text_color" />
-    <corners android:radius="6dp" />
+    <solid android:color="@color/cards_color" />
+    <corners android:radius="@dimen/radius16" />
 </shape>
