--- a/app/src/main/res/layout/fragment_details_tv.xml
+++ b/app/src/main/res/layout/fragment_details_tv.xml
@@ -1,18 +1,19 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="viewModel"
-            type="com.watermelon.moviesapp.ui.detailsTv.DetailsTvViewModel" />
+            type="com.watermelon.moviesapp.ui.detailsTv.about.DetailsTvViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/main_constraint"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/backgruond_color" >
+        android:background="@color/background_color">
 
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/loading"
@@ -44,103 +45,113 @@
         <androidx.coordinatorlayout.widget.CoordinatorLayout
             android:id="@+id/max"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-            <ScrollView
-                android:id="@+id/details_movie"
+            <LinearLayout
+                android:id="@+id/detailsMovie"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
+                android:layout_height="match_parent"
+                android:background="@drawable/details_shape"
+                android:elevation="@dimen/elevation8"
+                android:layout_gravity="bottom"
+                android:isScrollContainer="true"
+                android:orientation="vertical"
+                android:paddingTop="@dimen/padding24dp"
+                app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent">
 
                 <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:background="@drawable/details_shape"
-                    android:elevation="@dimen/elevation8"
-                    android:orientation="vertical"
-                    android:paddingTop="@dimen/padding24dp"
-                    android:paddingBottom="@dimen/padding32dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent">
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/margin24dp"
+                    android:gravity="center"
+                    android:orientation="horizontal">
 
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="@dimen/margin24dp"
-                        android:gravity="center"
-                        android:orientation="horizontal">
-
-                        <ImageView
-                            android:layout_width="18dp"
-                            android:layout_height="18dp"
-                            android:src="@drawable/ic_baseline_star_24" />
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:gravity="center"
-                            android:text="8.7"
-                            android:textSize="@dimen/text12sp"
-                            android:textColor="@color/primary_text_color"
-                            android:textStyle="bold" />
-
-                    </LinearLayout>
+                    <ImageView
+                        android:layout_width="18dp"
+                        android:layout_height="18dp"
+                        android:src="@drawable/ic_baseline_star_24" />
 
                     <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="@dimen/margin24dp"
-                        android:text="@{viewModel.tvDetails.toData().name}"
-                        android:textColor="@color/primary_text_color"
-                        android:textSize="@dimen/text28sp"
-                        android:textStyle="bold"
-                        tools:text="Movies Name" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="@dimen/margin24dp"
-                        android:layout_marginTop="@dimen/margin4dp"
-                        android:text="@{viewModel.tvDetails.toData().status + ` . ` + viewModel.tvDetails.toData().status +` . ( `+viewModel.tvDetails.toData().originalLanguage+` )`}"
-                        android:textAllCaps="true"
-                        android:textColor="@color/primary_text_color"
-                        android:textStyle="bold"
-                        tools:text="1995-10-20 . Released . (EN)" />
-
-                    <com.google.android.material.chip.ChipGroup
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        app:theListForChips="@{viewModel.tvDetails.toData().genres}"
-                        android:layout_marginHorizontal="@dimen/margin24dp"
-                        android:checked="false"
-                        android:layout_marginTop="@dimen/margin8dp"
-                        android:orientation="horizontal"/>
-
-                    <com.google.android.material.tabs.TabLayout
-                        android:id="@+id/tabLayout"
-                        style="@style/TabLayout"
-                        android:layout_marginHorizontal="@dimen/margin16dp"
-                        android:layout_marginTop="@dimen/margin14dp"
-                        android:background="@color/backgruond_color"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
-
-                    <androidx.viewpager2.widget.ViewPager2
-                        android:id="@+id/detailsTvViewPager"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:background="@android:color/transparent"/>
+                        android:gravity="center"
+                        android:text="8.7"
+                        android:textColor="@color/primary_text_color"
+                        android:textSize="@dimen/text12sp"
+                        android:textStyle="bold" />
 
                 </LinearLayout>
 
-            </ScrollView>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/margin24dp"
+                    android:text="@{viewModel.tvDetails.toData().name}"
+                    android:textColor="@color/primary_text_color"
+                    android:textSize="@dimen/text28sp"
+                    android:textStyle="bold"
+                    tools:text="Movies Name" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/margin24dp"
+                    android:layout_marginTop="@dimen/margin4dp"
+                    android:text="@{viewModel.tvDetails.toData().status + ` . ` + viewModel.tvDetails.toData().status +` . ( `+viewModel.tvDetails.toData().originalLanguage+` )`}"
+                    android:textAllCaps="true"
+                    android:textColor="@color/primary_text_color"
+                    android:textStyle="bold"
+                    tools:text="1995-10-20 . Released . (EN)" />
+
+                <com.google.android.material.chip.ChipGroup
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/margin24dp"
+                    android:layout_marginTop="@dimen/margin8dp"
+                    android:checked="false"
+                    android:orientation="horizontal"
+                    app:theListForChips="@{viewModel.tvDetails.toData().genres}" />
+
+                <com.google.android.material.tabs.TabLayout
+                    android:id="@+id/tabLayout"
+                    style="@style/TabLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/margin16dp"
+                    android:layout_marginTop="@dimen/margin14dp"
+                    android:background="@color/background_color"
+                    android:lineSpacingExtra="@dimen/margin16dp" />
+
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="0.3dp"
+                    android:layout_marginTop="@dimen/margin14dp"
+                    android:background="@color/cards_color"
+                    android:elevation="@dimen/margin2dp"
+                    android:shadowDy="4" />
+
+                <androidx.viewpager2.widget.ViewPager2
+                    android:id="@+id/detailsTvViewPager"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@android:color/transparent"
+                    android:clipToPadding="false"
+                    android:isScrollContainer="true" />
+
+            </LinearLayout>
 
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
+
