--- a/app/src/main/res/layout/fragment_more_details.xml
+++ b/app/src/main/res/layout/fragment_more_details.xml
@@ -5,27 +5,28 @@
     <data>
         <variable
             name="viewModel"
-            type="com.watermelon.moviesapp.ui.detailsTv.DetailsTvViewModel" />
+            type="com.watermelon.moviesapp.ui.detailsTv.about.DetailsTvViewModel" />
     </data>
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_marginTop="@dimen/margin24dp"
-        tools:context="com.watermelon.moviesapp.ui.detailsTv.AboutTvFragment">
+        android:layout_marginTop="@dimen/margin32dp"
+        tools:context="com.watermelon.moviesapp.ui.detailsTv.about.AboutTvFragment">
 
         <LinearLayout
+            android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:visibility="gone"
-            app:isNotNull="@{viewModel.tvDetails.toData().nextEpisodeToAir.overview}"
-            android:layout_marginHorizontal="@dimen/margin24dp"
             android:layout_marginTop="@dimen/margin16dp"
-            android:background="@drawable/shape_season"
             android:paddingHorizontal="@dimen/margin16dp"
-            android:paddingVertical="@dimen/margin8dp">
+            android:paddingVertical="@dimen/margin8dp"
+            app:isNotNull="@{viewModel.tvDetails.toData().nextEpisodeToAir.overview}"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -47,36 +48,39 @@
             <com.google.android.material.chip.Chip
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@{viewModel.tvDetails.toData().nextEpisodeToAir.airDate}"
-                app:chipStrokeWidth="1dp"
-                android:padding="@dimen/margin4dp"
-                android:gravity="end"
-                android:visibility="gone"
-                android:layout_marginTop="@dimen/margin8dp"
                 android:layout_gravity="end"
-                android:textColor="@color/primary_text_color"
+                android:layout_marginTop="@dimen/margin8dp"
                 android:backgroundTint="@android:color/transparent"
+                android:gravity="end"
+                android:padding="@dimen/margin4dp"
+                android:text="@{viewModel.tvDetails.toData().nextEpisodeToAir.airDate}"
+                android:textColor="@color/primary_text_color"
+                android:visibility="gone"
                 app:chipStrokeColor="@color/base_color"
+                app:chipStrokeWidth="1dp"
                 tools:text="1990-2-31" />
 
         </LinearLayout>
 
         <TextView
+            android:id="@+id/textView7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/padding24dp"
-            android:layout_marginTop="@dimen/margin24dp"
+            android:layout_marginTop="@dimen/margin16dp"
             android:text="Production Companies"
-            app:isNotNull="@{viewModel.tvDetails.toData().productionCompanies[0]}"
             android:textColor="@color/primary_text_color"
             android:textSize="@dimen/text20sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            app:isNotNull="@{viewModel.tvDetails.toData().productionCompanies[0]}"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_companies"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="@dimen/margin8dp"
             android:clipToPadding="false"
             android:orientation="horizontal"
             android:paddingHorizontal="@dimen/padding28dp"
@@ -84,9 +88,10 @@
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView7"
             app:showWhenSuccess="@{viewModel.tvDetails}"
             tools:listitem="@layout/item_production_companies_tv" />
 
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
