--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -13,7 +13,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/dark_bg">
+        android:background="@color/background_color">
 
         <com.google.android.material.imageview.ShapeableImageView
             android:layout_width="wrap_content"
@@ -70,7 +70,7 @@
             android:layout_marginTop="16dp"
             app:showWhenSuccess="@{viewModel.person}"
             android:text="@{viewModel.person.toData().name}"
-            android:textColor="@color/white"
+            android:textColor="@color/primary_text_color"
             android:textSize="16sp"
             tools:text="Brad Pitt"
             android:fontFamily="@font/archivo_black"
@@ -83,7 +83,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="35dp"
             android:layout_marginTop="8dp"
-            android:textColor="@color/white"
+            android:textColor="@color/primary_text_color"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/person_name"
             android:text="Action" />
@@ -93,10 +93,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:backgroundTint="@color/dark_bg"
+            android:backgroundTint="@color/background_color"
             app:tabIndicatorColor="@color/base_color"
             app:tabSelectedTextColor="@color/base_color"
-            app:tabTextColor="@color/dark_secondary"
+            app:tabTextColor="@color/secondary_text_color"
             app:layout_constraintTop_toBottomOf="@+id/textView"
             tools:layout_editor_absoluteX="35dp" />
 
@@ -111,67 +111,5 @@
 
         </androidx.viewpager2.widget.ViewPager2>
 
-        <!--        <TextView-->
-<!--            android:id="@+id/biography"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginStart="35dp"-->
-<!--            android:layout_marginTop="16dp"-->
-<!--            android:layout_marginEnd="35dp"-->
-<!--            android:fontFamily="@font/basic"-->
-<!--            android:lines="6"-->
-<!--            app:showWhenSuccess="@{viewModel.person}"-->
-<!--            android:text="@{viewModel.person.toData().biography}"-->
-<!--            android:textColor="@color/gray_text_color"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintTop_toBottomOf="@+id/person_name"-->
-<!--            tools:text="TextView  TextView  TextView  TextView  TextView  TextView  TextView  TextView  " />-->
-
-<!--        <TextView-->
-<!--            android:id="@+id/birthday"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginStart="35dp"-->
-<!--            android:layout_marginTop="16dp"-->
-<!--            android:text="@string/birthday"-->
-<!--            android:textColor="@color/blue_text_color"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintTop_toBottomOf="@+id/biography" />-->
-
-<!--        <TextView-->
-<!--            android:id="@+id/birthday_of_person"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginStart="8dp"-->
-<!--            android:layout_marginTop="16dp"-->
-<!--            android:text="@{viewModel.person.toData().birthday}"-->
-<!--            android:textColor="@color/gray_text_color"-->
-<!--            app:layout_constraintStart_toEndOf="@+id/birthday"-->
-<!--            app:layout_constraintTop_toBottomOf="@+id/biography" />-->
-
-<!--        <TextView-->
-<!--            android:id="@+id/popularity"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginStart="35dp"-->
-<!--            android:layout_marginTop="16dp"-->
-<!--            android:text="@string/popularity"-->
-<!--            android:textColor="@color/blue_text_color"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintTop_toBottomOf="@+id/birthday" />-->
-
-<!--        <TextView-->
-<!--            android:id="@+id/popularity_of_person"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginStart="8dp"-->
-<!--            android:layout_marginTop="16dp"-->
-<!--            android:text="@{String.valueOf(viewModel.person.toData().popularity)}"-->
-<!--            android:textColor="@color/gray_text_color"-->
-<!--            tools:text="15.3"-->
-<!--            app:layout_constraintStart_toEndOf="@+id/popularity"-->
-<!--            app:layout_constraintTop_toBottomOf="@+id/birthday_of_person" />-->
-<!--        -->
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
