--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -8,7 +8,6 @@
         <variable
             name="viewModel"
             type="com.watermelon.moviesapp.ui.search.SearchViewModel" />
-
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -60,7 +59,7 @@
             app:layout_constraintBottom_toBottomOf="@+id/search_bar"
             app:layout_constraintEnd_toEndOf="@+id/search_bar"
             app:layout_constraintTop_toTopOf="@+id/search_bar"
-            app:tint="@color/gray_text_color"
+            app:tint="@color/secondary_text_color"
             tools:ignore="ContentDescription" />
 
 
@@ -82,10 +81,12 @@
 
         <View
             android:id="@+id/break_line"
-            android:layout_width="0dp"
-            android:layout_height="2dp"
-            android:layout_marginVertical="12dp"
-            android:background="@color/gray_text_color"
+            android:layout_width="match_parent"
+            android:layout_height="0.3dp"
+            android:layout_marginTop="@dimen/margin14dp"
+            android:background="@color/cards_color"
+            android:elevation="@dimen/margin2dp"
+            android:shadowDy="4"
             android:transitionName="@string/line_transition"
             app:layout_constraintEnd_toEndOf="@+id/search_bar"
             app:layout_constraintStart_toStartOf="@+id/search_bar"
