--- a/app/src/main/res/layout/item_cast.xml
+++ b/app/src/main/res/layout/item_cast.xml
@@ -35,6 +35,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="@string/app_name"
+            android:singleLine="true"
             android:paddingTop="@dimen/margin2dp"
             android:layout_marginHorizontal="@dimen/margin4dp"
             android:text="@{item.name}"
