--- a/app/src/main/res/layout/item_categories.xml
+++ b/app/src/main/res/layout/item_categories.xml
@@ -38,7 +38,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin2x"
                 android:text="@{item.name}"
-                android:textColor="@color/white"
+                android:textColor="@color/primary_text_color"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toEndOf="@id/item_image"
@@ -63,11 +63,12 @@
                 android:layout_marginTop="@dimen/margin4dp"
                 android:layout_marginStart="6dp"
                 android:layout_marginEnd="@dimen/margin5x"
-                android:background="@color/gray_text_color"
+                android:background="@color/background_color"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/item_image"
                 app:layout_constraintBottom_toBottomOf="parent"/>
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
