--- a/app/src/main/res/layout/item_seasons.xml
+++ b/app/src/main/res/layout/item_seasons.xml
@@ -10,79 +10,78 @@
 
         <variable
             name="listener"
-            type="com.watermelon.moviesapp.ui.detailsTv.SeasonTvInteractionListener" />
-
+            type="com.watermelon.moviesapp.ui.home.MovieInteractionListener" />
     </data>
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:background="@drawable/shape_season"
+            android:layout_height="wrap_content"
+            android:animateLayoutChanges="true"
+            android:paddingHorizontal="@dimen/padding16dp"
             android:layout_marginHorizontal="@dimen/margin16dp"
             android:layout_marginVertical="@dimen/margin4dp"
-            android:paddingHorizontal="@dimen/padding12dp"
-            android:paddingVertical="@dimen/padding16dp"
-            android:orientation="vertical"
-            android:layout_width="wrap_content"
-            android:background="@drawable/shape_season"
-            android:layout_height="wrap_content">
+            android:paddingVertical="@dimen/padding16dp">
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{item.name}"
+                android:textColor="@color/primary_text_color"
+                android:textSize="@dimen/text16sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="Season 1" />
+
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_gravity="end"
+                android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
+                app:attachedView="@{layoutDescription}"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <LinearLayout
+                android:id="@+id/layoutDescription"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:text="Season 1"
-                    android:text="@{item.name}"
-                    android:textColor="@color/primary_text_color"
-                    android:textSize="@dimen/text16sp"
-                    android:textStyle="bold" />
-
-                <View
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:layout_weight="1" />
-
-                <ImageView
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:layout_gravity="end"
-                    android:src="@drawable/ic_baseline_keyboard_arrow_right_24" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_marginTop="@dimen/margin8dp"
+                android:layout_marginHorizontal="@dimen/margin8dp"
                 android:orientation="vertical"
-                android:layout_height="wrap_content">
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView2">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="@dimen/margin16dp"
                     android:text="@{item.overview}"
-                    android:visibility="gone"
-                    android:layout_marginTop="@dimen/margin8dp"
+                    android:textColor="@color/primary_text_color"
+                    app:isNotNull="@{item.overview}"
                     tools:text="description" />
 
                 <com.google.android.material.chip.Chip
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@{item.airDate.toString()}"
-                    app:chipStrokeWidth="1dp"
-                    android:padding="@dimen/margin4dp"
-                    android:gravity="end"
-                    android:visibility="gone"
-                    android:layout_marginHorizontal="@dimen/margin16dp"
-                    android:layout_marginVertical="@dimen/margin8dp"
                     android:layout_gravity="end"
-                    android:textColor="@color/primary_text_color"
                     android:backgroundTint="@android:color/transparent"
+                    android:gravity="end"
+                    android:text="@{item.airDate}"
+                    android:textColor="@color/primary_text_color"
                     app:chipStrokeColor="@color/base_color"
+                    app:chipStrokeWidth="1dp"
+                    app:isNotNull="@{item.airDate}"
                     tools:text="1990-2-31" />
 
             </LinearLayout>
 
-        </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
