--- a/app/src/main/res/layout/item_similar_movies.xml
+++ b/app/src/main/res/layout/item_similar_movies.xml
@@ -40,7 +40,7 @@
             android:singleLine="true"
             android:paddingTop="@dimen/margin2dp"
             android:layout_marginHorizontal="@dimen/margin4dp"
-            android:text="@{item.title}"
+            android:text="@{item.originalTitle}"
             android:textColor="@color/primary_text_color" />
 
     </LinearLayout>
