--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -12,7 +12,7 @@
 
         <item name="android:drawablePadding">@dimen/padding1x</item>
         <item name="android:hint">@string/search</item>
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textColor">@color/primary_text_color</item>
         <item name="android:background">@drawable/shape_search_bar</item>
 
     </style>
@@ -26,9 +26,10 @@
     </style>
 
     <style name="Widget.MyApp.Chip.Choice" parent="Widget.MaterialComponents.Chip.Choice">
+        <item name="android:elevation">3dp</item>
         <item name="chipBackgroundColor">@color/chip_state</item>
         <item name="materialThemeOverlay">@style/ThemeOverlay.MyApp.Chip.Choice</item>
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textColor">@color/primary_text_color</item>
         <item name="rippleColor">@color/base_color</item>
     </style>
 
