fix: details fragment chips text color on dark theme

--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -33,6 +33,11 @@
         <item name="rippleColor">@color/base_color</item>
     </style>
 
+    <style name="ChipTextStyle_Selected">
+        <item name="android:textSize">13sp</item>
+        <item name="android:textColor">@color/primary_text_color</item>
+    </style>
+
     <style name="ThemeOverlay.MyApp.Chip.Choice" parent="">
         <item name="elevationOverlayEnabled">false</item>
     </style>
